[tool.poetry]
name = "vape"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bundlewrap = "^3.5"
invoke = "^1.2"
python-cli-ui = "^0.7.2"
sshpubkeys = "^3.1"
entrypoints = "^0.2.3"
cleo = "^0.6.8"

[tool.poetry.dev-dependencies]
ipdb = "^0.11.0"
pytest = "^3.9"

[tool.poetry.scripts]
vap = "vape.__main__:vape.run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
